# OpenClaude-Tools

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build.yml
Doc/: ARCHITECTURE.md  BUG.md  SPEC.md  UI_SPEC.md
Doc/UI/: mcp.html  skiils.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: Header.tsx  Sidebar.tsx  StatusBar.tsx
src/i18n/: index.ts
src/pages/: .MCPMgmtPage.tsx.swp  BackupListPage.tsx  DashboardPage.tsx  MCPMgmtPage.tsx  ModelsMgmtPage.tsx  SettingsPage.tsx  SkillsMgmtPage.tsx  SyncCenterPage.tsx
src/stores/: configStore.ts  settingsStore.ts
src/types/: index.ts
