[package]
name = "openclaude-tools"
version = "1.0.0"
description = "OpenCode and Claude Code configuration sync tool"
authors = ["OpenClaude-Tools Team"]
edition = "2021"

[lib]
name = "openclaude_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
tauri-plugin-dialog = "2"
serde_json = "1"
dirs = "5"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
